# logistics-management-go

./: .air.toml  .dockerignore  .env  .env.example  .gitignore  .graphqlrc.ts  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  FIELD_REGISTRY_IMPLEMENTATION.md  FIELD_REGISTRY_QUICK_REFERENCE.md  GUIDELINES.md  README.md  biome.json  bunfig.toml  changelog.md  checklist.md  codegen.ts  components.json  compose.dev.yaml  compose.yaml  dev.compose.yaml  drizzle.config.ts  form.schema.jsonc  generate.sh  go.mod  go.sum  graphql.config.yml  justfile  main.go  makefile  package.json  pnpm-lock.yaml  rsbuild.config.ts  seed.ts  sqlc.yaml  sqlc.yml  tailwind.config.ts  test.compose.yaml  (+6 more)
services/graphql-auth/: Cargo.toml
services/graphql-auth/src/: cli.rs  guards.rs  lib.rs  main.rs  utils.rs
services/graphql-auth/src/commands/: introspect.rs  mod.rs  serve.rs
services/graphql-auth/src/entities/: account.rs  mod.rs  session.rs  user.rs  verification.rs
services/graphql-auth/src/models/: account.rs  session.rs  user.rs
services/graphql-auth/src/mutation/: account.rs  mod.rs  session.rs  user.rs
services/graphql-auth/src/queries/: user.rs
services/graphql-auth/src/query/: user.rs
services/graphql-crm/: Cargo.toml
services/graphql-crm/src/: lib.rs
services/graphql-crm/src/entities/: attachments.rs  campaigns.rs  cases.rs  companies.rs  contacts.rs  interactions.rs  invoice_items.rs  invoices.rs  leads.rs  mod.rs  notifications.rs  opportunities.rs  opportunity_products.rs  products.rs  taggings.rs  tags.rs
services/graphql-crm/src/models/: attachments.rs  campaigns.rs  cases.rs  companies.rs  contacts.rs  enums.rs  interactions.rs  invoice_items.rs  invoices.rs  leads.rs  mod.rs  notifications.rs  opportunities.rs  opportunity_products.rs  prelude.rs  products.rs  taggings.rs  tags.rs
services/graphql-crm/src/mutation/: attactments.rs  campaigns.rs  cases.rs  companies.rs  contacts.rs  interactions.rs  invoices.rs  leads.rs  mod.rs  notifications.rs  opportunities.rs  products.rs  tags.rs
services/graphql-crm/src/queries/: attachments.rs  campaigns.rs  cases.rs  companies.rs  contacts.rs  interactions.rs  invoice_items.rs  invoices.rs  leads.rs  mod.rs  notifications.rs  opportunities.rs  opportunity_products.rs  products.rs  taggings.rs  tags.rs
services/graphql-crm/src/query/: attactments.rs  campaigns.rs  cases.rs  companies.rs  contacts.rs  interactions.rs  invoices.rs  leads.rs  notifications.rs  opportunities.rs  products.rs  tags.rs
services/graphql-dms/: Cargo.toml
services/graphql-dms/src/: lib.rs
services/graphql-dms/src/entities/: customer_tracking_links.rs  delivery_routes.rs  delivery_tasks.rs  driver_locations.rs  mod.rs  proof_of_deliveries.rs  task_events.rs
services/graphql-dms/src/models/: customer_tracking_links.rs  delivery_routes.rs  delivery_tasks.rs  driver_locations.rs  enums.rs  mod.rs  prelude.rs  proof_of_deliveries.rs  task_events.rs
services/graphql-dms/src/mutation/: customer_tracking_links.rs  delivery_routes.rs  delivery_tasks.rs  driver_locations.rs  proof_of_deliveries.rs  task_events.rs
services/graphql-dms/src/queries/: customer_tracking_links.rs  delivery_routes.rs  delivery_tasks.rs  driver_locations.rs  proof_of_deliveries.rs  task_events.rs
services/graphql-dms/src/query/: customer_tracking_links.rs  delivery_routes.rs  delivery_tasks.rs  driver_locations.rs  mod.rs  proof_of_deliveries.rs  task_events.rs
services/graphql-ims/: Cargo.toml
services/graphql-ims/src/: lib.rs
services/graphql-ims/src/entities/: inbound_shipment_items.rs  inbound_shipments.rs  inventory_adjustments.rs  inventory_batches.rs  mod.rs  outbound_shipment_items.rs  outbound_shipments.rs  products.rs  reorder_points.rs  return_items.rs  returns.rs  sales_order_items.rs  sales_orders.rs  stock_transfers.rs  suppliers.rs
services/graphql-ims/src/models/: enums.rs  inbound_shipment_items.rs  inbound_shipments.rs  inventory_adjustments.rs  inventory_batches.rs  mod.rs  outbound_shipment_items.rs  outbound_shipments.rs  prelude.rs  products.rs  reorder_points.rs  return_items.rs  returns.rs  sales_order_items.rs  sales_orders.rs  sea_orm_active_enums.rs  stock_transfers.rs  suppliers.rs
services/graphql-ims/src/mutation/: inbound_shipments.rs  inventory_adjustments.rs  inventory_batches.rs  outbound_shipments.rs  products.rs  reorder_points.rs  returns.rs  sales_orders.rs  stock_transfers.rs  suppliers.rs
services/graphql-ims/src/queries/: inbound_shipment_items.rs  inbound_shipments.rs  inventory_adjustments.rs  inventory_batches.rs  mod.rs  outbound_shipment_items.rs  outbound_shipments.rs  products.rs  reorder_points.rs  return_items.rs  returns.rs  sales_order_items.rs  sales_orders.rs  stock_transfers.rs  suppliers.rs
services/graphql-ims/src/query/: inbound_shipments.rs  inventory_adjustments.rs  inventory_batches.rs  mod.rs  outbound_shipments.rs  products.rs  reorder_points.rs  returns.rs  sales_orders.rs  stock_transfers.rs  suppliers.rs
services/graphql-wms/: Cargo.toml
services/graphql-wms/src/: lib.rs
services/graphql-wms/src/entities/: bin_thresholds.rs  inventory_stock.rs  locations.rs  mod.rs  package_items.rs  packages.rs  pick_batch_items.rs  pick_batches.rs  putaway_rules.rs  task_items.rs  tasks.rs  warehouses.rs
services/graphql-wms/src/models/: bin_thresholds.rs  enums.rs  inbound_shipment_items.rs  inbound_shipments.rs  inventory_adjustments.rs  inventory_batches.rs  inventory_stock.rs  locations.rs  mod.rs  outbound_shipment_items.rs  outbound_shipments.rs  package_items.rs  packages.rs  pick_batch_items.rs  pick_batches.rs  prelude.rs  products.rs  putaway_rules.rs  reorder_points.rs  returns.rs  sales_order_items.rs  sales_orders.rs  sea_orm_active_enums.rs  stock_transfers.rs  task_items.rs  tasks.rs  warehouses.rs
services/graphql-wms/src/mutation/: bin_thresholds.rs  inbound_shipments.rs  inventory_batches.rs  inventory_stock.rs  locations.rs  mod.rs  outbound_shipments.rs  packages.rs  pick_batches.rs  putaway_rules.rs  reorder_points.rs  sales_orders.rs  suppliers.rs  tasks.rs  warehouses.rs
(+5090 files in other folders)
