[package]
name = "logistics-management-go"
edition.workspace = true
authors.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
  "karl robeck alferez",
  "vien kendrick morfe",
  "mhell bergonio",
  "andrei barlaan",
]

[workspace]
members = ["services/*"]

[workspace.dependencies]
anyhow = "1.0.99"
async-graphql = { version = "7.0.17", features = [
  "dataloader",
  "uuid",
  "chrono",
  "url",
  "decimal",
] }
sea-query = { version = "0.32.7", features = [
  "thread-safe",
  "backend-postgres",
  "with-uuid",
  "with-json",
  "with-chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "json",
  "uuid",
  "chrono",
  "macros",
] }
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }
rstest = "0.26.1"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
url = { version = "2.5.7", features = ["serde"] }
rust_decimal = "1.37.2"
sea-orm = { version = "1.1.16", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "with-chrono",
  "with-json",
  "with-rust_decimal",
  "with-uuid",
  "macros",
] }

[dependencies]
async-graphql = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
graphql-core = { path = "./services/graphql-core" }
graphql-auth = { path = "./services/graphql-auth" }
graphql-crm = { path = "./services/graphql-crm" }
graphql-ims = { path = "./services/graphql-ims" }
graphql-tms = { path = "./services/graphql-tms" }
graphql-wms = { path = "./services/graphql-wms" }
async-graphql-axum = "7.0.17"
