[package]
name = "graphql-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sqlx.workspace = true
async-graphql.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
chrono.workspace = true
sea-query.workspace = true
url.workspace = true
anyhow.workspace = true
validator.workspace = true
rstest.workspace = true
