[package]
name = "graphql-crm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sqlx.workspace = true
async-graphql.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
chrono.workspace = true
url.workspace = true
anyhow.workspace = true
validator.workspace = true
graphql-auth = { path = "../graphql-auth" }
graphql-core = { path = "../graphql-core" }
rust_decimal.workspace = true
sea-orm.workspace = true

[dev-dependencies]
rstest.workspace = true
