[package]
name = "graphql-dms"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sqlx.workspace = true
async-graphql.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
chrono.workspace = true
url.workspace = true
anyhow.workspace = true
validator.workspace = true
rstest.workspace = true
sea-orm.workspace = true
graphql-tms = { path = "../graphql-tms" }
graphql-wms = { path = "../graphql-wms" }
graphql-core = { path = "../graphql-core" }
rust_decimal.workspace = true
