[package]
name = "graphql-ims"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sqlx.workspace = true
async-graphql.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
chrono.workspace = true
url.workspace = true
anyhow.workspace = true
validator.workspace = true
rstest.workspace = true
sea-orm.workspace = true
graphql-crm = { path = "../graphql-crm" }
graphql-auth = { path = "../graphql-auth" }
